# DA_NYC_Taxis_Yellow_LAB

./: .gitignore  README.MD  config.py  environment.yml  setup.cfg  setup.py  setup_env.py
notebooks/: EDA_NYC_Taxis.ipynb  ETL_NYC_Taxis.ipynb  MyTools.ipynb  exploracion_inicial.ipynb  visualizaciones_zonas.ipynb
scripts/: auditoria_de_nulos.py  df_partition.py  mapeo_zonas.py  setup_path.py  splitter.py  transformaciones_categaricas.py
widgets/: splitter_widget.py  splitter_widget_subprocess.py  sys_path_config.py
