[metadata]
name = CHardy Extensions for DA
version = 0.1.0
author = Christian Hardy
description = Paquete modular con widgets y scripts para análisis de datos

[options]
packages = find:
python_requires = >=3.8
install_requires =
    ipywidgets
    notebook

[options.packages.find]
include =
    scripts*
    widgets*
